task2/dashboard_nginx_ssl_setup/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard-rule
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "internet-facing-ingress"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" 
    # cert-manager.io/cluster-issuer: "selfsign"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - test.securrency.com
    secretName: test-securrency-tls
  rules:
  - host: test.securrency.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
